--- a/survey/templates/survey/question.html
+++ b/survey/templates/survey/question.html
@@ -14,13 +14,14 @@
             <td>
 	            {{ form.label|safe }}
 	            {% if form.field.required %}
-	                <span class="glyphicon glyphicon-asterisk" style="color:red"> </span>
+	                <span class="glyphicon glyphicon-asterisk" style="color:red; font-size:50%;"> </span>
 	            {% endif %}
 	            <span class="help-inline" style="color:red">
 	                <strong> {% for error in  form.errors %}{{ error }}{% endfor %} </strong>
 	            </span> <br>
 	            {% for field in form %}
                     {{ field }}
+                    <div style="width: 10pt; height: auto; display: inline-block;"></div>
                 {% endfor%}
             </td>
         </tr>
