--- a/survey/templates/survey/combined_results.html
+++ b/survey/templates/survey/combined_results.html
@@ -1,53 +1,62 @@
-{% extends 'survey/base.html' %}
+{% extends 'survey/main.html' %}
 {% load i18n %}
 {% load survey_extras %}
 
 {% block body %}
-    <h1> {{survey.name}} </h1>
-    <div class="survey-description"> {{survey.description|safe}} </div>
-    {% for category in categories %}
-        <h3> {{category}} </h3>
-        <table class="table table-hover">
-            <thead>
-                <tr>
-                    <th></th>
-                    {% expr questions.filter(category=category).first().get_clean_choices() as choices %}
-                    {% if choices %}
-                        {% for choice in choices %}
-                            <th>{{choice}}</th>
-                        {% endfor %}
-                        <th>Total</th>
-                    {% else %}
-                        <th></th>
-                    {% endif %}
-                </tr>
-            </thead>
-            <tbody>
-                {% for question in questions %}
-                    {% if question.category == category %}
-                        <tr>
-                            <td>{{question.text}}</td>
-                            {% expr questions.filter(category=category).first().get_choices() as choices %}
-                            {% if choices %}
-                                {% for choice in choices %}
-                                    {% expr answers.filter(question=question, body=choice[0]).count as resp %}
-                                    <td>{{resp}}</td>
-                                {% endfor %}
-                                {% expr answers.filter(question=question).count as resp %}
-                                <td>{{resp}}</td>
-                            {% else %}
-                                <td>
-                                    {% for answer in answers %}
-                                        {% if answer.question == question %}
-                                            {{answer.body}}:::&nbsp;
-                                        {% endif %}
-                                    {% endfor %}
-                                </td>
+<div class="uk-container uk-container-center">
+    <div class="uk-width-1-1 uk-margin-top">
+        <div class="uk-card uk-card-default uk-card-body">
+            <div class="uk-card-header">
+                <h1 class="uk-card-title uk-margin-remove-bottom"> {{survey.name}} </h1>
+                <p class="uk-text-meta uk-margin-remove-top"> {{survey.description|safe}} </p>
+            </div>
+            {% for category in categories %}
+                <div class="uk-margin-medium-top">
+                    <h4> {{category}} </h4>
+                    <div class="uk-overflow-auto">
+                        <table class="uk-table uk-table-divider">
+                            {% if category.description %}
+                                <caption>{{category.description}}</caption>
                             {% endif %}
-                        </tr>
-                    {% endif %}
-                {% endfor %}
-            </tbody>
-        </table>
-    {% endfor %}
+                            <thead>
+                                <tr>
+                                    <th>Question</th>
+                                    {% expr category.questions.first().get_clean_choices() as choices %}
+                                    {% if choices %}
+                                        {% for choice in choices %}
+                                            <th class="uk-table-shrink">{{choice}}</th>
+                                        {% endfor %}
+                                        <th class="uk-table-shrink">Total</th>
+                                    {% else %}
+                                        <th>Responses</th>
+                                    {% endif %}
+                                </tr>
+                            </thead>
+                            <tbody>
+                                {% for question in category.questions.all %}
+                                    <tr>
+                                        <td>{{ question.text }}</td>
+                                        {% if question.get_choices %}
+                                            {% for choice in question.get_choices %}
+                                                {% expr question.answers.filter(body=choice[0]).count as resp %}
+                                                <td>{{ resp }}</td>
+                                            {% endfor %}
+                                            <td>{{ question.answers.all.count }}</td>
+                                        {% else %}
+                                            <td>
+                                                {% for answer in question.answers.all %}
+                                                    {{ answer.body }}<br>
+                                                {% endfor %}
+                                            </td>
+                                        {% endif %}
+                                    </tr>
+                                {% endfor %}
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+            {% endfor %}
+        </div>
+    </div>
+</div>
 {% endblock %}
